# Random_Scripts

./: .gitignore  image.ui  pdf_test.py  qt_test.py  test.py
Custom_Error/: improved_version.py  run.py
mlfow/: pyproject.toml  python_env.yaml  train.py
mlfow/mlruns/0/: meta.yaml
mlfow/mlruns/0/02f9ba6d7ace47cf80c837d1f89cf8dc/: meta.yaml
mlfow/mlruns/0/08ed56e0e42f492c848de2a590e4e8a7/: meta.yaml
mlfow/mlruns/0/215f12659cc840ffaac80fb7e2431002/: meta.yaml
mlfow/mlruns/0/298c19687eb044f99df4bfff4c2e6a6f/: meta.yaml
mlfow/mlruns/0/320d8cceabf44469895754f6c093f77b/: meta.yaml
mlfow/mlruns/0/3a80eae4ec28428894a0e0ac94777ea2/: meta.yaml
mlfow/mlruns/0/3b93d1b2e424437f955403c1e2dd15a4/: meta.yaml
mlfow/mlruns/0/4c65ac82a13142d49c48bf42666c1f1a/: meta.yaml
mlfow/mlruns/0/5e9d5ebf48af4cab958a7e8ed34298f3/: meta.yaml
mlfow/mlruns/0/674c2adb5011438f8643717e1d17eb4d/: meta.yaml
mlfow/mlruns/0/7c31d7ad25f84e41ba8d46c6dc7d2d04/: meta.yaml
mlfow/mlruns/0/88a523862b524526a755c0673834fa60/: meta.yaml
mlfow/mlruns/0/961eab44e32b4bbe836b7e503cad1443/: meta.yaml
mlfow/mlruns/0/a56f57e638014d27b97b8b366bfa50d0/: meta.yaml
mlfow/mlruns/0/a57036129d674ae29cf6bcb55493749f/: meta.yaml
mlfow/mlruns/0/ab4a8a5e325b4fa8bebed1cf27d60bc3/: meta.yaml
mlfow/mlruns/0/c763a4398368438494f1c1353bb8f78e/: meta.yaml
mlfow/mlruns/0/ca4c995596cc4b65925ccaa806701f2a/: meta.yaml
mlfow/mlruns/0/cb57b4f7f459461f84c9e1e5c3c66055/: meta.yaml
mlfow/mlruns/0/e2fc1b47e09e4b749cb42366756a2dfa/: meta.yaml
mlfow/mlruns/0/f7cd6729c1dc46c1862d2bce5ef85843/: meta.yaml
(+147 files in other folders)
