[tool.poetry]
name = "mlfow"
version = "0.1.0"
description = ""
authors = ["adrian <tamkayeung.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.1.1"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.1"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
